Less blocking version implemented. Model checking still reports deadlock