@@ -5,19 +5,25 @@ plugins {
 group = 'me.dimna'
 version = '1.0-SNAPSHOT'
 
+test {
+    useJUnitPlatform()
+
+    jvmArgs("--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-exports", "java.base/jdk.internal.util=ALL-UNNAMED")
+    maxHeapSize = "10g"
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlinx:lincheck:2.13"
-    testImplementation "org.jetbrains.kotlinx:lincheck:2.13"
-    testImplementation "junit:junit:4.12"
+    compile 'org.jetbrains.kotlinx:lincheck:2.14.1'
+    testImplementation 'org.jetbrains.kotlinx:lincheck:2.14.1'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.2"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.7.2"
 }
 
-test {
-    useJUnit()
-}
 
 compileKotlin {
     kotlinOptions.jvmTarget = '1.8'
